- Fixed alignment on Header items.

--- a/css/main.css
+++ b/css/main.css
@@ -206,15 +206,11 @@ button.list-group-item:hover{
 	right: 0px;
 	top: 50px;
 	bottom: 0px;
-	/*overflow-x: hidden;
-	overflow-y: auto;*/
-    z-index: 1;
-    /*background-color: rgba(128, 128, 128, 0.96);*/
+  z-index: 1;
 }
 
 .pageContent{
-	top: 0;
-    /*margin: 0 auto 2px;*/
+		top: 0;
     position: absolute;
     z-index: 4000;
     width: 100%;
@@ -245,7 +241,12 @@ button.list-group-item:hover{
     box-shadow: inset 0 1px 2px rgba(0,0,0,.1) !important;
 }
 
-.navFix{
-    position: fixed;
-    left: 308px;
+.navContainer{
+	right: 0;
+	left: 0;
+	position: fixed;
+}
+
+.navbar-form{
+	margin-right: 10px !important
 }
